<resources>
    <string name="app_name">swoosh</string>
    <string name="welcome_screen_image_string">welcome_screen_image</string>
    <string name="swoosh_logo_string">swoosh_logo</string>
    <string name="GO_ALL_IN_string">GO ALL IN</string>
    <string name="ON_GOING_ALL_OUT_string">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league_string">Find a team in your city, and dominate the
        league.
    </string>
    <string name="get_started_button_string">GET STARTED</string>
    <string name="league_screen_bg_string">League Screen BG</string>
    <string name="desired_league_string">Desired League</string>
    <string name="mens_string">MENS</string>
    <string name="womens_string">WOMENS</string>
    <string name="co_ed_string">Co-Ed</string>
    <string name="next_string">NEXT</string>
    <string name="skill_bg_sring">Skill BG</string>
    <string name="i_am_a_string">I am a:</string>
    <string name="beginner_string">Beginner</string>
    <string name="baller_string">Baller</string>
    <string name="finish_string">FINISH</string>
    <string name="finish_bg_string">Finish BG</string>
    <string name="finish_text_string">Looking for a co-ed beginner league near you...</string>
</resources>
