<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/league_screen_bg_string"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="46dp" android:contentDescription="@string/swoosh_logo_string"/>

    <TextView
            android:text="@string/desired_league_string"
            android:layout_width="227dp"
            android:layout_height="36dp"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="18sp"
            android:singleLine="true" android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="32dp" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp">
        <ToggleButton
                android:text="@string/mens_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mensLeagueBtn" android:textSize="18sp"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:textOff="@string/mens_string" android:textOn="@string/mens_string"
                android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/womens_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textSize="18sp" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle" android:textOff="@string/womens_string"
                android:textOn="@string/womens_string" android:onClick="onWomensClicked"/>
        <ToggleButton
                android:text="@string/co_ed_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coEdLeagueBtn" android:textSize="18sp"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:textOff="@string/co_ed_string" android:textOn="@string/co_ed_string"
                android:onClick="onCoEdClicked"/>
    </LinearLayout>

    <Button
            android:text="@string/next_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/league_next_btn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.0" android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>