<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/welcome_screen_image_string" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="46dp" android:contentDescription="@string/swoosh_logo_string"/>
    <TextView
            android:text="@string/GO_ALL_IN_string"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView3" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="48sp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/ON_GOING_ALL_OUT_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView"
    />
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league_string"
            android:layout_width="227dp"
            android:layout_height="36dp"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:singleLine="false" android:textAlignment="center"/>
    <Button
            android:text="@string/get_started_button_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/league_next_btn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>